kubernetes/KC/apps/self-hosted/fastapi-dls/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: fastapi-dls
    namespace: self-hosted
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:/y2N4EuBiGWDUh0QjSKe1UkQwHI4+uDLYBLS81OMpw==,iv:Ka43vdyp/NTo9eHxsdlofb0eZ9FrlKVu1TDXrYOtdcA=,tag:xUZAK/Tohs01IO3ASr2TeA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:dwWHhTEgSLRAswE=,iv:RUlp4SQFgcT7gD7VRY+xuI5EU/mafBCggyQu4b8fh58=,tag:4OVk2rhUnkylPGCq53KlYw==,type:str]
              namespace: ENC[AES256_GCM,data:xLDpw2zNYJj7hhI=,iv:J+SEsKpb41dWSsPI/BTXJjrj5KmnxCjMFfkdsKsJ8U4=,tag:R1Frms7qZPpD4QGdDqXfkg==,type:str]
              port: ENC[AES256_GCM,data:qUpU,iv:zS7i7kym85fYdLq7OH6TW0X9THXQ8FcMGAuv3dGzOTQ=,tag:UBbGuni6L4iX+sC1OrcBGA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:9ScFQzMnpCIkeK0=,iv:wWuC6V/I7cm7zmaxNkC70VvvX92kNOcgHKX0VZlEdSY=,tag:xRDFS9fBSIxuVOAHGwdEag==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0UnMxWnRTM25kbzBRR2c1
[...]
            vbIPQ5ztMls7C/DeViPX1EaZ38izapkumflGxpTuQnPMZCmCEUG/AQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-27T19:26:40Z"
    mac: ENC[AES256_GCM,data:yidCh6Z9n8MIl7+wwPcZtwn4LGW6rjERkU98dOKIMxT9s5YFqvQwArHgD+BMdJmN7Y1YCHSpouSVz2cwXn8Mn/EaAP6MPmE6LdFkp3Ady541CihrvSchF/qLwqCPmOACj4oT7Gd1Mm/090fk8druqA0bU3Ao6ge5fTN5/B+f+GY=,iv:AnCwAxJvQ4pnEEJ8gSiomWi8PoqNlTrckh9TdGMO7bk=,tag:O4oOZWcAx+6sELfAar9CSg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
